cabal-version:      3.0
name:               lstate-loader
version:            1.0.0.0
license:            Apache-2.0
license-file:       LICENSE
synopsis:           Loads cardano-db-sync ledger state snapshots into memory
description:
  A simple application that loads ledger state snapshots from cardano-db-sync into memory,
  primarily for profiling memory usage.
author:             Sean D Gillespie
maintainer:         sean@mistersg.net
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

executable lstate-loader
    import:           warnings
    main-is:          Main.hs
    build-depends:
      base,
      bytestring,
      optparse-applicative,
      ouroboros-consensus,
      cardano-binary,
      cardano-ledger-byron,
      cardano-ledger-core,
      cardano-prelude,
      formatting,
      ouroboros-consensus,
      ouroboros-consensus-cardano,
      text
    hs-source-dirs:   app
    default-language: Haskell2010
