cabal-version:      3.0
name:               lstate-loader
version:            1.0.0.0
license:            Apache-2.0
license-file:       LICENSE
synopsis:           Loads cardano-db-sync ledger state snapshots into memory
description:
  A simple application that loads ledger state snapshots from cardano-db-sync into memory,
  primarily for profiling memory usage.
author:             Sean D Gillespie
maintainer:         sean@mistersg.net
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

executable lstate-loader
    import:           warnings
    main-is:          Main.hs
    build-depends:
      base,
      lstate-loader,
      bytestring,
      optparse-applicative,
      ouroboros-consensus,
      cardano-binary,
      cardano-ledger-byron,
      cardano-ledger-core,
      cardano-prelude,
      formatting,
      ouroboros-consensus,
      ouroboros-consensus-cardano,
      text
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -O2
      -threaded
      -rtsopts
      "-with-rtsopts=-A16m -N3 --disable-delayed-os-memory-return"

library
    import:           warnings
    build-depends:
      base,
      bytestring,
      ouroboros-consensus,
      cardano-binary,
      cardano-ledger-allegra,
      cardano-ledger-alonzo,
      cardano-ledger-babbage,
      cardano-ledger-byron,
      cardano-ledger-conway,
      cardano-ledger-core,
      cardano-ledger-mary,
      cardano-ledger-shelley,
      cardano-prelude,
      cardano-strict-containers,
      containers,
      data-default-class,
      formatting,
      ouroboros-consensus,
      ouroboros-consensus-cardano,
      sop-core,
      strict-sop-core,
      text
    hs-source-dirs:   app
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:
      Data.Cardano.LState
